--- a/index.html
+++ b/index.html
@@ -2,107 +2,238 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Ton City - Global Economy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TON City | Tu Negocio en la Blockchain</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        body { background-color: #050a10; color: white; font-family: sans-serif; overflow: hidden; height: 100vh; }
-        .grid-bg {
-            background-image: linear-gradient(rgba(0, 152, 234, 0.1) 1px, transparent 1px),
-                              linear-gradient(90deg, rgba(0, 152, 234, 0.1) 1px, transparent 1px);
-            background-size: 40px 40px;
+        :root {
+            --ton-blue: #0088cc;
+            --dark-bg: #050a10;
+            --card-bg: rgba(15, 23, 42, 0.8);
         }
+
+        body {
+            background-color: var(--dark-bg);
+            color: white;
+            font-family: 'Inter', sans-serif;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        /* Contenedor Isométrico */
         .city-container {
-            transform: rotateX(45deg) rotateZ(-30deg);
-            transform-style: preserve-3d;
+            perspective: 1200px;
+            padding: 20px;
+            padding-bottom: 120px;
+            margin-top: 10px;
         }
-        .building { position: relative; transition: transform 0.3s; cursor: pointer; }
-        .building:hover { transform: translateZ(10px) scale(1.1); }
-        .building-label {
-            transform: rotateZ(30deg) rotateX(-45deg);
-            background: rgba(0, 0, 0, 0.8);
-            border: 1px solid #0098ea;
-            padding: 2px 6px;
-            border-radius: 4px;
-            font-size: 0.65rem;
+
+        .city-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 16px;
+            transform: rotateX(20deg) rotateZ(-5deg);
+            transition: transform 0.5s ease;
+        }
+
+        /* Tarjetas de Edificios 3D */
+        .building {
+            background: var(--card-bg);
+            border: 1px solid rgba(59, 130, 246, 0.3);
+            border-radius: 16px;
+            padding: 15px;
+            text-align: center;
+            position: relative;
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.4);
+            backdrop-filter: blur(5px);
+        }
+
+        .building:hover {
+            transform: translateZ(30px) translateY(-5px);
+            border-color: var(--ton-blue);
+            box-shadow: 0 20px 40px rgba(0, 136, 204, 0.3);
+        }
+
+        .building-icon {
+            font-size: 2.5rem;
+            margin-bottom: 8px;
+            display: block;
+            filter: drop-shadow(0 0 8px rgba(255,255,255,0.2));
+        }
+
+        .status-dot {
             position: absolute;
-            top: -25px;
-            white-space: nowrap;
+            top: 10px;
+            right: 10px;
+            width: 8px;
+            height: 8px;
+            background: #10b981;
+            border-radius: 50%;
+            box-shadow: 0 0 8px #10b981;
         }
-        .energy-fill {
+
+        /* Especiales */
+        .main-hub { grid-column: span 2; border-color: #fbbf24; }
+        .free-zone { border-color: #10b981; }
+        .fun-zone { border-color: #a855f7; }
+
+        /* Barra de Energía */
+        .energy-section {
+            position: fixed;
+            bottom: 85px;
+            left: 0;
+            width: 100%;
+            padding: 0 20px;
+            z-index: 40;
+        }
+
+        .bar-bg {
+            background: #1e293b;
+            height: 10px;
+            border-radius: 5px;
+            overflow: hidden;
+            border: 1px solid rgba(255,255,255,0.1);
+        }
+
+        .bar-fill {
+            background: linear-gradient(90deg, #3b82f6, #60a5fa);
+            width: 85%;
             height: 100%;
-            background: linear-gradient(90deg, #00d2ff, #3a7bd5);
-            width: 100%; /* Inicia lleno */
-            transition: width 0.5s;
+            box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
         }
-        .core-glow { filter: drop-shadow(0 0 15px #0098ea); }
+
+        /* Navegación */
+        .nav-bar {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: rgba(10, 20, 32, 0.95);
+            border-top: 1px solid rgba(59, 130, 246, 0.2);
+            display: flex;
+            justify-content: space-around;
+            padding: 12px 0;
+            backdrop-filter: blur(10px);
+            z-index: 50;
+        }
+
+        .nav-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 0.7rem;
+            color: #94a3b8;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .nav-item.active { color: var(--ton-blue); }
+        .nav-item i { font-size: 1.2rem; margin-bottom: 4px; }
+
+        .btn-collect {
+            background: #10b981;
+            font-size: 0.6rem;
+            padding: 2px 8px;
+            border-radius: 4px;
+            margin-top: 5px;
+            font-weight: bold;
+        }
     </style>
 </head>
-<body class="flex flex-col">
+<body>
 
-    <div class="p-4 bg-[#0d141e] border-b-2 border-blue-500 text-center">
-        <p class="text-[10px] text-gray-400 uppercase tracking-widest">Capital Disponible</p>
+    <header class="pt-10 pb-4 text-center">
+        <p class="text-blue-400 text-xs font-bold tracking-widest mb-1">CAPITAL DISPONIBLE</p>
         <div class="flex justify-center items-center gap-2">
-            <img src="https://cryptologos.cc/logos/toncoin-ton-logo.png" width="22" alt="TON">
-            <span id="balance" class="text-3xl font-bold font-mono">0.00000000</span>
+            <img src="https://cryptologos.cc/logos/toncoin-ton-logo.png" width="30" alt="TON">
+            <span class="text-4xl font-black italic">0.0025</span>
         </div>
-        <p id="tasa" class="text-blue-400 text-xs mt-1 font-mono">+0.00000000 TON/sec</p>
-    </div>
+        <div class="text-green-400 text-xs mt-1 font-mono">+0.00000002 TON/sec</div>
+    </header>
 
-    <div class="flex-grow grid-bg relative flex items-center justify-center overflow-hidden">
-        <div class="city-container grid grid-cols-3 gap-12 p-10">
+    <div class="city-container">
+        <div class="city-grid">
             
-            <div class="building core-glow col-start-2 row-start-2" onclick="openModal('central')">
-                <div class="building-label border-blue-400 text-blue-300">CENTRAL HUB</div>
-                <img src="https://cdn-icons-png.flaticon.com/512/1006/1006771.png" class="w-24 h-24">
+            <div class="building main-hub">
+                <div class="status-dot"></div>
+                <span class="building-icon">🏛️</span>
+                <h3 class="text-yellow-500 font-bold text-sm uppercase">Edificio Central</h3>
+                <p class="text-[10px] text-gray-400 italic">Balance de Negocios & Datos</p>
             </div>
 
-            <div class="building" onclick="openModal('banco')">
-                <div class="building-label"><i class="fas fa-university text-yellow-500"></i> BANCO</div>
-                <img src="https://cdn-icons-png.flaticon.com/512/2830/2830284.png" class="w-20 h-20">
+            <div class="building">
+                <span class="building-icon">🏦</span>
+                <h3 class="font-bold text-sm">BANCO</h3>
+                <p class="text-[10px] text-gray-400">Interés por Depósito</p>
             </div>
 
-            <div class="building" onclick="openModal('casino')">
-                <div class="building-label"><i class="fas fa-dice text-red-500"></i> CASINO</div>
-                <img src="https://cdn-icons-png.flaticon.com/512/1055/1055823.png" class="w-20 h-20">
+            <div class="building">
+                <span class="building-icon">🛒</span>
+                <h3 class="font-bold text-sm">TIENDA</h3>
+                <p class="text-[10px] text-gray-400">Mejoras de Producción</p>
             </div>
 
-            <div class="building" onclick="openModal('tienda')">
-                <div class="building-label"><i class="fas fa-shopping-cart text-green-500"></i> TIENDA</div>
-                <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" class="w-20 h-20">
+            <div class="building">
+                <span class="building-icon">🎰</span>
+                <h3 class="font-bold text-sm text-red-400">CASINO</h3>
+                <p class="text-[10px] text-gray-400">Apuesta tu Suerte</p>
             </div>
 
-            <div class="building" onclick="openModal('piscina')">
-                <div class="building-label"><i class="fas fa-swimming-pool text-blue-400"></i> PISCINA</div>
-                <img src="https://cdn-icons-png.flaticon.com/512/2555/2555020.png" class="w-20 h-20">
+            <div class="building">
+                <span class="building-icon">🏊‍♂️</span>
+                <h3 class="font-bold text-sm text-cyan-400">PISCINAS</h3>
+                <p class="text-[10px] text-gray-400">Staking Comunitario</p>
             </div>
+
+            <div class="building free-zone">
+                <span class="building-icon">🌳</span>
+                <h3 class="font-bold text-sm text-green-400">PARQUE</h3>
+                <p class="text-[10px] text-gray-400">TON Gratis cada 2h</p>
+                <button class="btn-collect">RECOLECTAR</button>
+            </div>
+
+            <div class="building fun-zone">
+                <span class="building-icon">🎡</span>
+                <h3 class="font-bold text-sm text-purple-400">DIVERSIÓN</h3>
+                <p class="text-[10px] text-gray-400">Tareas y Juegos</p>
+            </div>
+
         </div>
     </div>
 
-    <div class="p-4 bg-[#0a0f16] border-t border-gray-800">
-        <div class="flex justify-between text-[10px] mb-1 px-1">
-            <span class="text-yellow-500 font-bold uppercase underline">Energía Ciudadana</span>
-            <span id="energia-texto">1000/1000</span>
+    <div class="energy-section">
+        <div class="flex justify-between text-[10px] mb-1 font-bold">
+            <span>⚡ ENERGÍA CIUDADANA</span>
+            <span>950 / 1000</span>
         </div>
-        <div class="w-full bg-gray-900 rounded-full h-2 mb-4">
-            <div id="energy-bar" class="energy-fill" style="width: 100%;"></div>
-        </div>
-
-        <div class="flex gap-2">
-            <button class="flex-1 bg-gray-800 p-3 rounded-xl border border-gray-700 text-xs" onclick="alert('Tienda de Mejoras próximamente')">
-                <i class="fas fa-rocket text-orange-500 block text-lg mb-1"></i> MEJORAS
-            </button>
-            <button class="flex-1 bg-gray-800 p-3 rounded-xl border border-gray-700 text-xs">
-                <i class="fas fa-users text-blue-400 block text-lg mb-1"></i> AMIGOS
-            </button>
-            <button class="flex-1 bg-blue-900/30 p-3 rounded-xl border border-blue-500 text-xs font-bold" onclick="alert('Mínimo de retiro: 0.1 TON')">
-                <i class="fas fa-wallet text-yellow-400 block text-lg mb-1"></i> RETIRAR
-            </button>
+        <div class="bar-bg">
+            <div class="bar-fill"></div>
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <nav class="nav-bar">
+        <a href="#" class="nav-item active">
+            <i class="fas fa-rocket"></i>
+            <span>Mejoras</span>
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-users"></i>
+            <span>Amigos</span>
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-wallet"></i>
+            <span>Retirar</span>
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-user-gear"></i>
+            <span>Perfil</span>
+        </a>
+    </nav>
+
 </body>
 </html>
